updated mobile for rfs case study; added spacing under coop case study under prototype section

--- a/coop.html
+++ b/coop.html
@@ -51,7 +51,7 @@
                       </p>
                       <p id="caption">branding   |   strategy   |   UX & UI</p>
                       <p>
-                      <a href="#"><button class="case-study-button">view prototype</button></a>
+                      <a data scroll href="#prototype"><button class="case-study-button">view prototype</button></a>
                       <p><i><small>COOP was a project under the Bloc course. It is not a functioning website.</i></small>
                   </div>
                   <div class="hero-image">
@@ -131,8 +131,8 @@
               </div>
           </section>
           <section class="users">
-              <div class="part">
-                  <h2 id="container">User Personas</h2>
+              <div class="part" id="container">
+                  <h2>User Personas</h2>
                   <br>
                   <div class="user-boxes">
                       <div class="john">
@@ -198,7 +198,7 @@
           <section class="branding">
               <div class="part" id="container">
                   <div class="branding-section">
-                      <h2>branding</h2>
+                      <h2>Branding</h2>
                       <br>
                       <img src="images/coop/coop-logo-form.png" class="more-full">
                       <!---
@@ -246,9 +246,9 @@
 
               </div>
           </section>
-          <section class="prototype">
+          <section class="prototype" id="prototype">
               <div class="part" id="container">
-                  <h2>prototype</h2>
+                  <h2>Prototype</h2>
                   <!--
                   <h3>User Feedback</h3>
                       <div class="user-feedback">
@@ -263,6 +263,8 @@
                       <img src="images/coop/coop-landing.png" class="full">
                       <div class="clearfix"></div>
                   </div>
+              </div>
+              <div class="part" id="container">
                   <div class="prototype-page">
                       <h3>User Onboarding</h3>
                       <p>The user onboarding and sign-in sections are simple and similar.
@@ -273,11 +275,15 @@
                           <div class="clearfix"></div>
                       </div>
                   </div>
+              </div>
+              <div class="part" id="container">
                   <div class="prototype-page">
                       <h3>Dashboard</h3>
                       <img src="images/coop/coop-dash.png" class="full">
                       <div class="clearfix"></div>
                   </div>
+              </div>
+              <div class="part" id="container">
                   <div class="prototype-page">
                       <h3>Membership</h3>
                       <ul class="prototype-images">
@@ -287,6 +293,8 @@
                           <div class="clearfix"></div>
                       </ul>
                   </div>
+              </div>
+              <div class="part" id="container">
                   <div class="prototype-page">
                       <h3>Adding content</h3>
                       <p>To add content, the user will click on the “Add +” call to action.
