--- a/rfs.html
+++ b/rfs.html
@@ -211,11 +211,11 @@
                           <h2>Competitive Landscape</h2>
                           <p>
                           <ul class="lists">
-                              <li><b>Main competitors:</b> Mr. Patina, J. Fitzpatrick Shoes, Septieme Largeur, Barker Shoes,
+                              <li><p><b>Main competitors:</b> Mr. Patina, J. Fitzpatrick Shoes, Septieme Largeur, Barker Shoes,
                               Crocket & Jones, and Dandy Shoe Care</li>
-                              <li><b>Price point:</b> $300-$1,000</li>
-                              <li><b>Design aesthetic:</b> craftsmanship, old school </li>
-                              <li><b>How they market:</b> social media</li>
+                              <li><p><b>Price point:</b> $300-$1,000</li>
+                              <li><p><b>Design aesthetic:</b> craftsmanship, old school </li>
+                              <li><p><b>How they market:</b> social media</li>
                           </ul>
                           <ul class="inspo" id="no-mobile" style="margin-bottom:0;">
                               <div class="first" style="width:50%;">
@@ -233,18 +233,9 @@
                           <h4>Standing out</h4>
                           <p>To differentiate, we focused on price, marketing, and the RFS message:
                           <ul class="lists">
-                              <!--div class="third">
-                                  <img src="images/icons/price-tag.png" style="width:93%;"-->
-                                  <li><b>Lower price point:</b> $75-$250</li>
-                              <!--/div>
-                              <div class="third">
-                                  <img src="images/icons/paper-plane.png"-->
-                                  <li><b>Marketing:</b> word of mouth, Google ads, and social media</li>
-                              <!--/div>
-                              <div class="third">
-                                  <img src="images/icons/speaker.png"-->
-                                  <li><b>Message to customers:</b> Great craftsmanship.</li>
-                              <!--/div-->
+                                  <li><p><b>Lower price point:</b> $75-$250</li>
+                                  <li><p><b>Marketing:</b> word of mouth, Google ads, and social media</li>
+                                  <li><p><b>Message to customers:</b> Great craftsmanship.</li>
                               <div class="clearfix"></div>
                           </ul>
                       </div>
@@ -384,50 +375,57 @@
                               <button>lo-fi prototype</button></a>
                         </div>
                   </div>
-                  <div class="part" id="container">
-                      <h3>Product details</h3>
-                      <p>During testing, users spent the most time on this page, reading through the details.
-                        They generally liked the layout, but brought up obvious concerns that I’ve added - as
-                        you can see in version 2. I also received a great comment that I left up to the entrepreneur:
-                        “What about including a before picture?" He, unfortunately, doesn’t have before photos for all of
-                        his shoes, but plans to take before photos from now on.</p>
-                      <div class="third">
-                          <p id="caption" style="text-align:center;">version 1</p>
-                          <img src="images/rfs-sketch-detail.png" class="full">
+                  <div class="part">
+                      <div id="container">
+                          <h3>Product details</h3>
+                          <p>During testing, users spent the most time on this page, reading through the details.
+                            They generally liked the layout, but brought up obvious concerns that I’ve added - as
+                            you can see in version 2. I also received a great comment that I left up to the entrepreneur:
+                            “What about including a before picture?" He, unfortunately, doesn’t have before photos for all of
+                            his shoes, but plans to take before photos from now on.</p>
                       </div>
-                      <div class="third">
-                          <p id="caption" style="text-align:center;">version 2</p>
-                          <img src="images/rfs-lofi-shoe-detail.png" class="full">
+                      <div class="product-details" id="shadow" id="width">
+                          <div class="third">
+                              <p id="caption" style="text-align:center;">version 1</p>
+                              <img src="images/rfs-sketch-detail.png" class="full">
+                          </div>
+                          <div class="third">
+                              <p id="caption" style="text-align:center;">version 2</p>
+                              <img src="images/rfs-lofi-shoe-detail.png" class="full">
+                          </div>
+                          <div class="third">
+                              <p id="caption" style="text-align:center;">version 3</p>
+                              <img src="images/rfs-shoe-detail.png" class="full">
+                          </div>
+                          <div class="clearfix"></div>
                       </div>
-                      <div class="third">
-                          <p id="caption" style="text-align:center;">version 3</p>
-                          <img src="images/rfs-shoe-detail.png" class="full">
-                      </div>
-                      <div class="clearfix"></div>
                       <br>
-                      <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88">
-                        <button>lo-fi prototype</button></a>
+                      <div id="width">
+                        <a href="https://bloc.mybalsamiq.com/projects/gulbaharokuyan/prototype/refated-HPv2?key=3a5a2fd80b3260daa462236f6967b65d4db73d88">
+                          <button>lo-fi prototype</button></a>
+                      </div>
                   </div>
-              </div>
               <div class="branding">
                   <div class="part" id="container">
                       <h2>Branding</h2>
                       <p>
                       <h3>Logo Formation</h3>
-                      <p>I went through very different variations of logos to
-                        see what the client was leaning towards.</p>
-                      <div class="part" style="width:68%; margin:auto;">
-                          <div class="first">
-                              <p id="caption" style="text-align:center;">like this</p>
-                              <img src="images/rfs/irish-r.png" class="full">
+                      <div id="no-mobile">
+                          <p>I went through very different variations of logos to
+                            see what the client was leaning towards.</p>
+                          <div class="part" style="width:68%; margin:auto;">
+                              <div class="first">
+                                  <p id="caption" style="text-align:center;">like this</p>
+                                  <img src="images/rfs/irish-r.png" class="full">
+                              </div>
+                              <div class="second">
+                                  <p id="caption" style="text-align:center;">and this</p>
+                                  <img src="images/rfs/r-stencil.png" class="full">
+                              </div>
+                              <div class="clearfix"></div>
                           </div>
-                          <div class="second">
-                              <p id="caption" style="text-align:center;">and this</p>
-                              <img src="images/rfs/r-stencil.png" class="full">
-                          </div>
-                          <div class="clearfix"></div>
                       </div>
-                      <h4>However, the logos that fit the brand the best were:</h4>
+                      <h4 id="no-mobile">The logo finalists:</h4>
                       <div class="part"style="width:68%; margin:auto;">
                           <div class="first">
                               <p id="caption" style="text-align:center;">craftsmanship</p>
@@ -516,7 +514,7 @@
                   <div class="user-feedback">
                       <div id="container">
                           <h3>Feedback</h3>
-                          <h4>Condensed and edited transcript of the average tester:</h4>
+                          <h4 id="no-mobile">Condensed and edited transcript of the average tester:</h4>
                           <p>
                           <div class="transcript" id="no-mobile">
                               <p id="transcript">For something so unique, the process should be highlighted a little bit better. Only the name alerted me that it was something else. And the pictures made it seem like it was worn.
@@ -534,7 +532,7 @@
                           </div>
                           <div class="clearfix"></div>
                           <br>
-                          <button class="collapsible">see full transcript</button>
+                          <button class="collapsible">see transcript of average tester</button>
                           <div class="coll-content">
                               <p id="transcript"><i>Look around and talk about what you think this is about.
                                 What can you do here, what's it for, what strikes you about
@@ -573,11 +571,12 @@
                                 <br><i>What, if anything, do you like or dislike? Since this isn’t a finished design, what would you like to see in the final version?</i>
                                 <br>Highlight unique process of shoes. Show that it’s not your average everyday retail site.</p>
                             </div>
-                            <p><h4 id="spacing-fix">Photos</h4>
-                            <p>We had to upgrade our quality of photos.
-                            <h4>Background section</h4>
+                            <p><h4 id="spacing-fix">Main feedback</h4>
+                            <p><b>Photos</b>
+                            <p>We had to upgrade our quality of photos. As is, they were taking away from the design and purpose of the site.
+                            <p><b>Background section</b>
                             <p>We had to include a section that described the process. The before and after shoes, that were mentioned during the lo- and hi-fi tests, would be a great solution for the next round of shoes.
-                            <h4>Shopping cart</h4>
+                            <p><b>Shopping cart</b>
                             <p>I designed the shopping cart to look like any other shopping cart.
                               It included a small image of the product, the price, the description,
                               and the quantity that is being purchased. A tester had stared at this
