--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                               <div class="clearfix"> </div>
                           </div>
                           <br>
-                          <a href="/images/#.pdf" download><button>download resume</button></a>
+                          <a href="/images/about/resume.pdf" download><button>download resume</button></a>
                     </div>
                 </div>
                 <div class="part">
@@ -112,19 +112,6 @@
                               </a>to discuss the importance of technology</li>
                               <li>Designed layout, edited photos, and wrote content for websites and marketing materials for more than 5 companies</li>
                           </ul>
-
-                          <!--:
-                        <ul class="examples">
-                            <li class="first" id="one">Acquired more than $80 million for programs in resource-poor areas:
-                              affordable housing in Haiti and a fintech study in the Philippines</li>
-                            <li class="second" id="two">Designed information architecture and design of SharePoint sites for two companies and managed
-                              the company transition</li>
-                            <div class="clearfix"></div>
-                            <li class="first" id="three">Keynote speaker for a Filipino national credit union association's annual conference,
-                              to discuss the importance of technology</li>
-                            <li class="second" id="four">Designed layout, edited photos, and wrote content for websites and marketing materials for more than 5 companies</li>
-                            <div class="clearfix"></div>
-                        </ul>-->
                         <p>However, most rewarding and interesting, has been the user research during program design. I firmly
                           believed and was often shown that solutions lie within the communities that were facing the challenges.
                           I was only needed to kickstart their ideas or speed up activities with fundraising. I also learned that
