updated rfs case study - highlighted survey results, fixed navigation opacity, and removed dumb quotes

--- a/rfs.html
+++ b/rfs.html
@@ -140,19 +140,19 @@
                       <div class="image-in-bg" id="quote">
                         <div id="container">After three rounds of surveys and data
                             mining, I could pinpoint the specific points that would
-                            become issues for branding &mdash; the term <b><i>“refurbished”</i></b>
+                            become issues for branding &mdash; the term <b><i>&ldquo;refurbished&rdquo;</i></b>
                             and ambiguity surrounding the <b><i>process</i></b>
                             of refurbishing shoes.</div>
                       </div>
                       <div class="part" id="container">
                           <h4>Finding a replacement word</h4>
-                          <p>We tested a replacement for "refurbished" and wanted to know what it was
+                          <p>We tested a replacement for &ldquo;refurbished&rdquo; and wanted to know what it was
                             about the word the threw people off. We got <b>133
                               responses</b> and found our new word:</p>
                           <p id="spacing-fix">
-                          <h1 style="text-align:center;">"Hand-painted"</h1>
+                          <h1 style="text-align:center;">&ldquo;Hand-painted&rdquo;</h1>
                           <p id="spacing-fix"></p>
-                          <br>When asked, "Would you buy shoes that were hand-painted?"</p>
+                          <br>When asked, &ldquo;Would you buy shoes that were hand-painted?&rdquo;</p>
                           <div class="pieChart">
                               <canvas id="myChart" width="400" height="400" style="display:block;width:100px;height:100px;"></canvas>
                                 <script>
@@ -185,8 +185,8 @@
                               </script>
                           </div>
                           <br>
-                          <p>54.3% of surveyors might buy “hand-painted” shoes,
-                            while 25.4% definitely would buy them.</p3>
+                          <p><span id="purple">54.3%</span> of surveyors might buy &ldquo;hand-painted&rdquo; shoes,
+                            while <span id="pink">25.4%</span> definitely would buy them.</p>
                       </div>
                   </div>
                   <div class="users" id="container">
@@ -242,8 +242,8 @@
                       <div class="part">
                           <h4>A quick lesson learned</h4>
                           <p>The designer behind RFS often used the metaphor of the phoenix,
-                           "rebirthed from the fire of the bargain bin who finds himself
-                            on the top shelf once again.” Clever, right?
+                           &ldquo;rebirthed from the fire of the bargain bin who finds himself
+                            on the top shelf once again.&rdquo; Clever, right?
                           <p>Wrong. Our research didn't agree with us. People didn’t want to
                             hear that they were wearing old or used shoes. We tested a few
                             other terms to use, and decided on “hand-painted shoes”, and we’d
@@ -322,9 +322,9 @@
                               <p id="caption" style="text-align: center;">version 1</p>
                               <img src="images/rfs-lofi-HPv1.png">
                           </div>
-                          <div class="second" id="win">
-                              <p id="caption" style="text-align: center;">version 2</p>
-                              <img src="images/rfs-lofi-HPv2.png">
+                          <div class="second">
+                              <p id="caption" style="text-align: center; font-weight:800; color:white;">version 2</p>
+                              <img src="images/rfs-lofi-HPv2.png" id="win">
                               <div class="clearfix"></div>
                           </div>
                       </div>
