Updated homepage hero and about page hero

--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
               </ul>
           </nav>
           <section class="intro">
-              <div id="more-container">
-                  <h1>/gyl.bɑ.hɑɾ/</h1>
+              <div id="container">
+                  <img src="images/me.png"><h1>/gyl.bɑ.hɑɾ/</h1>
                   <br>
-                  <h2>or you can call me G for short; Rose for translation</h2>
+                  <h5>you can call me G for short; Rose for translation</h5>
               </div>
           </section>
       </header>
@@ -48,12 +48,8 @@
           <section class="about">
                 <div class="intro-me">
                     <div class="part" id="container">
-                        <img src="images/me.png">
-                        <h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.</h2>
-                        <p>I love solving puzzles and challenges.</p>
-                        <br>
-                        <h4>Summary</h4>
-                        <p>I'm a UX designer with expertise in business development and strategy.
+                        <!--<h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.</h2><-->
+                        <p>I'm a business development expert with skills in ux and strategy.
                           Sector-agnostic, my main role is to help manage and guide you to reach
                           your goal, whether it's a website, a project, or a product. I've worked in
                           financial services, agriculture, entrepreneurship, and art.
