--- a/index.html
+++ b/index.html
@@ -42,13 +42,21 @@
               </nav>
               <section class="hero">
                   <div id="container">
-                      <h1><i>Hi,</i> I’m Gulbahar,</h1>
-                      <h1>freelance ux designer in Milan;</h1>
-                      <h1>made in NYC.</h1>
-                      <div class="buttons">
-                            <a href="about.html"><button>proper pronunciation</button></a>
+                      <div id="intro">
+                          <h5>Hi, my name is <b>Gulbahar</b> - call me G for short or Rose
+                          or translation. I’m a business development expert
+                          who’s passionate about business design & ux.
+                          <b>Born in Brooklyn</b>, currently a student at SDABocconi
+                          in <b>Milan, Italy</b>. Looking for opportunities in Strategy/
+                          Business Design.</h4>
+                          <p>
+                          <h5>Scroll for case studies or <a href="about.html"><u>click here for my background</u></a>.</h5>
+                          <!--<div class="buttons">
+                                <a href="about.html"><button>proper pronunciation</button></a>
+                          </div-->
                       </div>
                   </div>
+                  <div class="clearfix"></div>
               </section>
       </header>
       <main>
