--- a/about.html
+++ b/about.html
@@ -68,12 +68,12 @@
                               <div class="clearfix"> </div>
                           </div>
                           <br>
-                          <a href="/images/about/resume.pdf" download><button>download resume</button></a>
+                          <a href="/images/about/okuyanresume.pdf" download><button>download resume</button></a>
                     </div>
                 </div>
                 <div class="part">
                     <div id="container">
-                      <h2 id="color">Origin Story</h2>
+                      <!--h2 id="color">Origin Story</h2>
                       <h1 style="padding-top:2rem;">“OW!”</h1>
                       <p>It happened, again. My husband just walked his toe <i class="fas fa-shoe-prints" style="color: #87EED5;"></i> right into the bookshelf. Clumsiness aside,
                         we all should be able to freely walk our living rooms, regardless of size, sans fear of pain.
@@ -84,36 +84,29 @@
                         for both of us and that looked as nice as possible without replacing or removing our furniture.
                       <p>Then I found UX design in a TedTalk and a documentary. Finally, a name and CAREER to my hobby and skills. I immediately
                         researched programs to learn how to utilize my expertise and learn design tools and chose <a href="https://www.bloc.io/designer-track">Bloc’s Designer Track</a>.
-                    </div>
+                    </div-->
                 </div>
                 <div class="part">
                     <div id="container">
-                        <h2 id="color">What Have I Been Up To?</h2>
-                        <p>My journey includes more than 8 years of
-                          working in international development, where &mdash; according to Malcolm Gladwell &mdash; I became an
-                          expert in development finance and agriculture, and got paid to travel to Myanmar, Kosovo,
-                          Haiti, Bangladesh, Guatemala, Kenya, and most recently the Philippines. It also includes
-                          an underlying story of self-discovery and an MBA.
-                        <p>From 2010 until July 2018, I was a business development professional, designing and writing
-                          grants and contracts for USG-funded programming in developing countries and designing and implementing
-                          marketing strategies to raise company visibility. My experience was mainly with small companies - with
-                          a maximum of 40 people and a 5-person business development team. I wore a lot of hats and got a lot of
-                          opportunities:
+                        <h2 id="color">background</h2>
+                        <p>As a business development expert for more than 8 years, I've
+                          had the priviledge of traveling to seven countries across
+                          four regions, including Haiti, Guatemala, and Kenya.
+
+                        <p>highlights:
                           <ul class="list-item">
                               <li>Acquired more than $80 million for programs in resource-poor areas:
                                 <a href="https://www.woccu.org/programs/current_programs/haiti/haiti_home">affordable housing in Haiti</a> and a fintech study in the Philippines</li>
+                              <li><a href="https://www.facebook.com/natcconetwork/photos/a.223993887965495.1073741827.222874298077454/576101469421400/?type=3&theater">Keynote speaker for a Filipino national credit union association's annual conference,
+                                </a>to discuss the importance of technology</li>
                               <li>Designed information architecture and design of SharePoint sites for two companies and managed
                                 the company transition</li>
-                              <li><a href="https://www.facebook.com/natcconetwork/photos/a.223993887965495.1073741827.222874298077454/576101469421400/?type=3&theater">Keynote speaker for a Filipino national credit union association's annual conference,
-                              </a>to discuss the importance of technology</li>
                               <li>Designed layout, edited photos, and wrote content for websites and marketing materials for more than 5 companies</li>
                           </ul>
-                        <p>However, most rewarding and interesting, has been the user research during program design. I firmly
-                          believed and was often shown that solutions lie within the communities that were facing the challenges.
-                          I was only needed to kickstart their ideas or speed up activities with fundraising. I also learned that
-                          the ideas or programs that took a community-based approach were the most successful and had the most
-                          beneficial side-effects like increased savings.
-                        <p>Now, I’m an MBA student at <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">SDA Bocconi</a>, specializing in product development, marketing, and innovation.
+                        <p>
+                        <p>My next step is to graduate from the MBA program at
+                          <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">SDA Bocconi</a>,
+                          specializing in product development, marketing, and innovation.
                     </div>
                 </div>
                     <div class="clearfix"></div>
