changed the home page and about section. included haiti case study

--- a/coop.html
+++ b/coop.html
@@ -38,7 +38,7 @@
                   <div class="clearfix"></div>
                   <li><a href="index.html">work</a></li>
                   <li><a href="about.html">about</a></li>
-                  <li><a href="mailto:g.leyla.ok@gmail.com">contact</a></li>
+                  <li><a href="mailto:gokuyan@gmail.com">contact</a></li>
                   </a>
               </ul>
           </nav>
