--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>UX Designer: Gulbahar Okuyan-Waugh</title>
+      <title>Gulbahar (Rose) Okuyan-Waugh</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
@@ -34,7 +34,7 @@
                       <div class="clearfix"></div>
                       <li><a data scroll href="#projects">work</a></li>
                       <li><a href="about.html">about</a></li>
-                      <li><a href="mailto:g.leyla.ok@gmail.com">contact</a></li>
+                      <li><a href="mailto:gokuyan@gmail.com">contact</a></li>
                       </a>
                   </ul>
                   <div class="clearfix"></div>
@@ -44,13 +44,11 @@
                   <div id="container">
                       <div id="intro">
                           <h5>Hi, my name is <b>Gulbahar</b> - call me G for short or Rose
-                          or translation. I’m a business development expert
-                          who’s passionate about business design & ux.
-                          <b>Born in Brooklyn</b>, currently a student at SDABocconi
-                          in <b>Milan, Italy</b>. Looking for opportunities in Strategy/
-                          Business Design.</h4>
+                          for translation. I’m a business and strategy designer with ux and web development skills.
+                          Born in NY; currently an MBA student at SDA Bocconi
+                          in Milan, Italy.</h5>
                           <p>
-                          <h5>Scroll for case studies or <a href="about.html"><u>click here for my background</u></a>.</h5>
+                          <h5>Scroll for case studies or <a href="about.html"><u>click here</u></a>.</h5>
                           <!--<div class="buttons">
                                 <a href="about.html"><button>proper pronunciation</button></a>
                           </div-->
@@ -62,37 +60,49 @@
       <main>
           <section id="projects">
               <div id="container">
-                  <div class="first">
-                      <div class="content">
-                        <a href="rfs.html" class="rfs-image">
-                              <img src="images/rfs-etsy.png">
-                        </a>
-                          <div class="clearfix"></div>
-                          <div class="text">
-                                <p id="caption">ReFated Shoes</p>
-                                <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
-                                  help taking his company to the next level.</p>
-                          </div>
-                          <a href="rfs.html"><button>see case study</button></a>
-                          <div class="clearfix"></div>
+
+                  <div class="section">
+                      <div id="color">project design</div>
+                      <div class="clearfix"></div>
+                      <p>Combining technology & education to reach the underserved in Haiti.
+                      <div class="project-1">
+                              <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
+                              <div class="clearfix"></div>
                       </div>
+                      <div class="project-2">
+                          <a href="images/case-haiti.pdf"><button>see case study</button></a>
+                      </div>
+                      <div class="clearfix"></div>
                   </div>
-                  <div class="second">
-                      <div class="content">
-                          <a href="coop.html" class="coop-image">
-                                <img src="images/coop/coop-home.png">
-                          </a>
-                          <div class="clearfix"></div>
-                          <div class="text">
-                                <p id="caption">COOP</p>
-                                <p>A platform that makes it easy to share, store, and collaborate
-                                   needed help rebranding for a new audience.</p>
-                          </div>
+                  <div class="section">
+                      <div id="color">ux design</div>
+                      <div class="clearfix"></div>
+                      <p>Refated Shoes - hand-dyeing shoes to create a unique twist.
+                      <div class="project-1">
+                            <a href="rfs.html" class="rfs-image"><img src="images/rfs-etsy.png"></a>
+                              <div class="clearfix"></div>
+                      </div>
+                      <div class="project-2">
+                          <p>This entrepreneur needed help taking his company online. This was a project for the Bloc program.</p>
+                              <a href="rfs.html"><button>see case study</button></a>
+                      </div>
+                      <div class="clearfix"></div>
+                  </div>
+                  <div class="section">
+                      <p>COOP - a sharing platform.
+                      <div class="project-1">
+                              <a href="coop.html" class="coop-image">
+                                    <img src="images/coop/coop-home.png"></a>
+                            <div class="clearfix"></div>
+                      </div>
+                      <div class="project-2">
+                          <p>A platform that makes it easy to share, store, and collaborate
+                                       needed help rebranding for a new audience. This was a project for the Bloc program.</p>
                           <a href="coop.html"><button>see case study</button></a>
-                          <div class="clearfix"></div>
+                              <div class="clearfix"></div>
                       </div>
+                      <div class="clearfix"></div>
                   </div>
-                  <div class="clearfix"></div>
               </div>
           </section>
 
@@ -115,14 +125,14 @@
                         <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
                             <i class="fab fa-linkedin-in"></i></a>
                         </li>
-                        <li><a href="mailto:g.leyla.ok@gmail.com" alt="email me">
+                        <li><a href="mailto:gokuyan@gmail.com" alt="email me">
                             <i class="fas fa-envelope"></i></a>
                         </li>
                         <li><a href="https://github.com/okleyla" alt="github">
                             <i class="fab fa-github"></i></a>
                         </li>
                   </ul>
-                  <p>content and design. &copy 2018 Gulbahar Okuyan-Waugh</p>
+                  <p>content and design &copy 2019 Gulbahar Okuyan-Waugh</p>
               </div>
           </div>
       </footer>
