--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>UX Designer: Gulbahar Okuyan-Waugh</title>
+        <title>Gulbahar (Rose) Okuyan-Waugh</title>
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/about.css">
@@ -31,15 +31,15 @@
                   <div class="clearfix"></div>
                   <li><a data-scroll="" href="./#projects">work</a></li>
                   <li><a href="about.html">about</a></li>
-                  <li><a href="mailto:g.leyla.ok@gmail.com">contact</a></li>
+                  <li><a href="mailto:gokuyan@gmail.com">contact</a></li>
                   </a>
               </ul>
           </nav>
           <section class="intro">
               <div id="container">
-                  <img src="images/me.png"><h1>/gyl.bɑ.hɑɾ/</h1>
-                  <br>
-                  <h5>you can call me G for short; Rose for translation</h5>
+                  <b>Gulbahar (Rose) Okuyan</b>
+                  <p>Business & strategy designer
+                  <p>Turkish-American living in Milano.
               </div>
           </section>
       </header>
@@ -49,11 +49,9 @@
                 <div class="intro-me">
                     <div class="part" id="container">
                         <!--<h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.</h2><-->
-                        <p>I'm a business development expert with skills in ux and strategy.
-                          Sector-agnostic, my main role is to help manage and guide you to reach
-                          your goal, whether it's a website, a project, or a product. I've worked in
-                          financial services, agriculture, entrepreneurship, and art.
-                          <div class="caps">
+                        <p>Hi, my name is Gulbahar - call me G for short or Rose for translation. Born in Brooklyn,
+                          currently a student <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">@SDABocconi</a> in Milan, Italy.
+                          <!--div class="caps">
                               <div class="first">
                                   <h4>Skills</h4>
                                   <p>UX design, UI design, branding & identity, information architecture,
@@ -66,14 +64,15 @@
                                     Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
                               </div>
                               <div class="clearfix"> </div>
-                          </div>
+                          </div-->
                           <br>
+                          <p>
                           <a href="/images/about/okuyanresume.pdf" download><button>download resume</button></a>
                     </div>
                 </div>
-                <div class="part">
+                <!--div class="part">
                     <div id="container">
-                      <!--h2 id="color">Origin Story</h2>
+                      <h2 id="color">Origin Story</h2>
                       <h1 style="padding-top:2rem;">“OW!”</h1>
                       <p>It happened, again. My husband just walked his toe <i class="fas fa-shoe-prints" style="color: #87EED5;"></i> right into the bookshelf. Clumsiness aside,
                         we all should be able to freely walk our living rooms, regardless of size, sans fear of pain.
@@ -84,16 +83,18 @@
                         for both of us and that looked as nice as possible without replacing or removing our furniture.
                       <p>Then I found UX design in a TedTalk and a documentary. Finally, a name and CAREER to my hobby and skills. I immediately
                         researched programs to learn how to utilize my expertise and learn design tools and chose <a href="https://www.bloc.io/designer-track">Bloc’s Designer Track</a>.
-                    </div-->
-                </div>
+                    </div>
+                </div-->
                 <div class="part">
                     <div id="container">
-                        <h2 id="color">background</h2>
-                        <p>As a business development expert for more than 8 years, I've
-                          had the priviledge of traveling to seven countries across
-                          four regions, including Haiti, Guatemala, and Kenya.
+                        <div id="color">what drives me</div>
+                        <p>You know that feeling when you’re overcome with excitement and don’t want the conversation to end, so you keep picking at the food on the table and ordering more coffee, all because you’ve found someone who talks about the circular economy as excitedly as you do? These conversations continually convince me of the power of design and the need to think holistically.
 
-                        <p>highlights:
+                        <div id="color">what brought me here</div>
+                        <p>As a new business designer within the social innovation sector, I’ve had the unique opportunity to design programs that try to solve challenging problems in resource-poor environments like affordable housing finance in Haiti and agricultural input centers in Bangladesh.
+                        <p>A couple of years ago, led by my interest in human-centered design, I wanted to become a UX designer. I enrolled in Bloc’s design bootcamp and am now proficient in HTML, CSS, Adobe Creative Cloud,  Sketch, Balsamiq, and Figma. However, after designing and coding this portfolio, I realized that I really enjoy the business end of design. So now, I mix my design and business tools to guide my processes. For instance, I created a proposal design canvas - inspired by the Business Model Canvas - that I used to develop projects. Here is the <a href="images/case-haiti.pdf">case study</a> where I use this tool.
+
+                        <div id="color">highlights:</div>
                           <ul class="list-item">
                               <li>Acquired more than $80 million for programs in resource-poor areas:
                                 <a href="https://www.woccu.org/programs/current_programs/haiti/haiti_home">affordable housing in Haiti</a> and a fintech study in the Philippines</li>
@@ -111,18 +112,20 @@
                 </div>
                     <div class="clearfix"></div>
           </section>
-          <!--section id="contact">
-              <div class="contact-text">
-                  <h2>let's chat &darr;</h2>
+          <section id="contact">
+              <div class="contact-text" id="container">
+                  <h2>&darr; If you'd like to get in touch.</h2>
               </div>
-          </section-->
+              <div class="clearfix"></div>
+
+          </section>
     <!--
           <section class="moodboard">
                 <h2>visual inspiration</h2>
                 <img src="images/Moodboard.png">
-          </section>
+          </section-->
 
-          <div class="clearfix"></div-->
+          <div class="clearfix"></div>
       </main>
       <footer>
           <div class="footer-info">
