updated home and about page text and layout and colors. also updated font family

--- a/about.html
+++ b/about.html
@@ -37,20 +37,19 @@
           </nav>
           <section class="intro">
               <div id="container">
-                  <b>Gulbahar (Rose) Okuyan</b>
-                  <p>Business & strategy designer
-                  <p>Turkish-American living in Milano.
+                <p>My name is Gulbahar &#8212; call me G for short or Rose for translation.
+                <p>Made in NY, student at SDA Bocconi in Milano.
+                <p>
+                <a href="/images/about/okuyanresume.pdf" download><button>resume</button></a>
               </div>
           </section>
       </header>
       <main>
 
           <section class="about">
-                <div class="intro-me">
+                <!--div class="intro-me">
                     <div class="part" id="container">
-                        <!--<h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.</h2><-->
-                        <p>Hi, my name is Gulbahar - call me G for short or Rose for translation. Born in Brooklyn,
-                          currently a student <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">@SDABocconi</a> in Milan, Italy.
+                        <<h2>I am a consummate daydreamer, lover of hyperbole, and story-teller.</h2><-->
                           <!--div class="caps">
                               <div class="first">
                                   <h4>Skills</h4>
@@ -64,13 +63,13 @@
                                     Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
                               </div>
                               <div class="clearfix"> </div>
-                          </div-->
+                          </div>
                           <br>
                           <p>
-                          <a href="/images/about/okuyanresume.pdf" download><button>download resume</button></a>
+                          <
                     </div>
                 </div>
-                <!--div class="part">
+                <div class="part">
                     <div id="container">
                       <h2 id="color">Origin Story</h2>
                       <h1 style="padding-top:2rem;">“OW!”</h1>
@@ -89,11 +88,11 @@
                     <div id="container">
                         <div id="color">what drives me</div>
                         <p>You know that feeling when you’re overcome with excitement and don’t want the conversation to end, so you keep picking at the food on the table and ordering more coffee, all because you’ve found someone who talks about the circular economy as excitedly as you do? These conversations continually convince me of the power of design and the need to think holistically.
-
+                        <p>
                         <div id="color">what brought me here</div>
                         <p>As a new business designer within the social innovation sector, I’ve had the unique opportunity to design programs that try to solve challenging problems in resource-poor environments like affordable housing finance in Haiti and agricultural input centers in Bangladesh.
                         <p>A couple of years ago, led by my interest in human-centered design, I wanted to become a UX designer. I enrolled in Bloc’s design bootcamp and am now proficient in HTML, CSS, Adobe Creative Cloud,  Sketch, Balsamiq, and Figma. However, after designing and coding this portfolio, I realized that I really enjoy the business end of design. So now, I mix my design and business tools to guide my processes. For instance, I created a proposal design canvas - inspired by the Business Model Canvas - that I used to develop projects. Here is the <a href="images/case-haiti.pdf">case study</a> where I use this tool.
-
+                        <p>
                         <div id="color">highlights:</div>
                           <ul class="list-item">
                               <li>Acquired more than $80 million for programs in resource-poor areas:
