--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/landing.css">
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700|Rozha+One" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700i|Poppins:400,400i,800,800i" rel="stylesheet">
       <script src="javascript/script.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
@@ -22,11 +22,7 @@
   </head>
   <body>
       <header>
-              <nav><!--
-                  <a href="index.html" class="logo">
-                      <img src="images/spring.png" alt="gulbahar okuyan logo">
-                  </a>-->
-
+              <nav>
                   <ul class="nav-bar" id="topnav">
                       <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                           <i class="fa fa-bars"></i>
@@ -41,10 +37,15 @@
                 <!--  <a href="img.html">images </a>-->
               </nav>
               <section class="hero">
-                  <div id="container">
-                      <div id="intro">
+                <div id="container">
+                  <h2>Gulbahar Okuyan-Waugh</h2>
+                  <h1>Strategist & Business Developer</h1>
+                  <p>An American in Milan. MBA student at <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">SDA Bocconi</a>.</p>
+                  <a data scroll href="#projects" alt="projects">
+                      <i class="far fa-arrow-alt-circle-down" style="font-size:30px; color:white;"></i></a>
+                      <!--div id="intro">
                           <h5>Hi, my name is <b>Gulbahar</b> - call me G for short or Rose
-                          for translation. I’m a business and strategy designer with ux and web development skills.
+                          for translation. I’m a <b>strategist & business developer</b> with ux and web development skills.
                           Born in NY; currently an MBA student at SDA Bocconi
                           in Milan, Italy.</h5>
                           <p>
@@ -62,43 +63,54 @@
               <div id="container">
 
                   <div class="section">
-                      <div id="color">project design</div>
+                      <div id="color">project design/social innovation</div>
+                      <p>
                       <div class="clearfix"></div>
-                      <p>Combining technology & education to reach the underserved in Haiti.
                       <div class="project-1">
                               <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
                               <div class="clearfix"></div>
                       </div>
                       <div class="project-2">
+                          <p>Combining technology & education to reach the underserved in Haiti.
+                          <p>Client: USAID/Haiti
+                          <p>Dates: 2015-2017
+                          <p><i>While working at <a href="http://www.woccu.org/programs/approach">WOCCU</a>.</i>
+                          <p>
                           <a href="images/case-haiti.pdf"><button>see case study</button></a>
                       </div>
                       <div class="clearfix"></div>
                   </div>
                   <div class="section">
-                      <div id="color">ux design</div>
+                      <div id="color">ux design/branding & web design</div>
+                      <p>
                       <div class="clearfix"></div>
-                      <p>Refated Shoes - hand-dyeing shoes to create a unique twist.
                       <div class="project-1">
                             <a href="rfs.html" class="rfs-image"><img src="images/rfs-etsy.png"></a>
                               <div class="clearfix"></div>
                       </div>
                       <div class="project-2">
-                          <p>This entrepreneur needed help taking his company online. This was a project for the Bloc program.</p>
-                              <a href="rfs.html"><button>see case study</button></a>
+                          <p>Refated Shoes: Helping an artist/entrepreneur get off eBay and onto his own site.
+                          <p>Client: RFS artist
+                          <p>Dates: 2017
+                          <p><i>Project for Bloc bootcamp.</i>
+                          <p><a href="rfs.html"><button>see case study</button></a>
                       </div>
                       <div class="clearfix"></div>
                   </div>
                   <div class="section">
-                      <p>COOP - a sharing platform.
+                      <div id="color">ux design/re-branding & web design</div>
+                      <p>
+                      <div class="clearfix"></div>
                       <div class="project-1">
                               <a href="coop.html" class="coop-image">
                                     <img src="images/coop/coop-home.png"></a>
                             <div class="clearfix"></div>
                       </div>
                       <div class="project-2">
-                          <p>A platform that makes it easy to share, store, and collaborate
-                                       needed help rebranding for a new audience. This was a project for the Bloc program.</p>
-                          <a href="coop.html"><button>see case study</button></a>
+                          <p>COOP: rebranding a sharing platform that makes it easy to share, store, and collaborate.
+                          <p>Dates: 2017
+                          <p><i>Project for Bloc bootcamp.</i>
+                          <p><a href="coop.html"><button>see case study</button></a>
                               <div class="clearfix"></div>
                       </div>
                       <div class="clearfix"></div>
