updated header size, main nav color, and link hover color to bold purple. also added contact section on landing page

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Gulbahar (Rose) Okuyan-Waugh</title>
+        <title>about - Gulbahar (Rose) Okuyan-Waugh</title>
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link rel="stylesheet" type="text/css" href="styles/about.css">
@@ -31,7 +31,7 @@
                   <div class="clearfix"></div>
                   <li><a data-scroll="" href="./#projects">work</a></li>
                   <li><a href="about.html">about</a></li>
-                  <li><a href="mailto:gokuyan@gmail.com">contact</a></li>
+                  <li><a href="mailto:gokuyan@gmail.com">email</a></li>
                   </a>
               </ul>
           </nav>
