--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                       <div class="clearfix"></div>
                       <li><a data scroll href="#projects">work</a></li>
                       <li><a href="about.html">about</a></li>
-                      <li><a href="mailto:gokuyan@gmail.com">contact</a></li>
+                      <li><a href="mailto:gokuyan@gmail.com">email</a></li>
                       </a>
                   </ul>
                   <div class="clearfix"></div>
@@ -118,15 +118,12 @@
               </div>
           </section>
 
-          <!--section id="contact">
-              <div class="contact">
-                  <div class="contact-text">
-                      <h2>let's chat &darr;</h2>
-                      <p></p>
-                      <div class="clearfix"></div>
-                  </div>
+          <section id="contact">
+              <div class="contact-text">
+                  <h2>&darr; If you'd like to get in touch.</h2>
               </div>
-          </section-->
+              <div class="clearfix"></div>
+          </section>
       </main>
       <div class="clearfix"></div>
 
